[package]
name = "pyo3-chrono"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
description = "Adds PyO3 support to Chrono structs via newtypes"
license = "MIT"
keywords = ["chrono", "pyo3", "datetime", "python"]
categories = ["api-bindings", "date-and-time"]
repository = "https://github.com/kangalioo/pyo3-chrono/"

[dependencies]
pyo3 = "0.14"
chrono = "0.4"